# tockar-discord-bot

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
rubbergod/: __init__.py  gif_cog.py  gif_features.py
rubbergod_gif/: cog.py  features.py
vlcice_gif/: __init__.py  gif_functions.py  helpers.py  image_utils.py
vlcice_gif/data/: module.py
